appId: nl.amsterdam.app.dev
jsEngine: graaljs
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- runScript: parking/scripts/getRandomLicensePlate.js
- runFlow:
    file: parking/shared/InitStartSession.yaml
    env:
      PERMIT: 'Bedrijfs.*'
      REPORT_CODE: __PARKING_ACCOUNT_BEDRIJF_REPORT_CODE__
      PIN_CODE: __PARKING_ACCOUNT_BEDRIJF_PIN_CODE__
- scrollUntilVisible:
    element:
      id: ParkingGoToStartSessionCodevergunningButton
- tapOn:
    id: ParkingGoToStartSessionCodevergunningButton
- tapOn:
    id: 'ParkingChooseLicensePlateButton'
- waitForAnimationToEnd
- assertVisible:
    id: ParkingSessionAddLicensePlateSubmitButton
- runFlow: parking/shared/SaveLicensePlate.yaml
- runFlow: parking/shared/ChooseEndTimeScrollWheel.yaml
- scrollUntilVisible:
    element:
      id: ParkingStartSessionCodevergunningButton
- tapOn:
    id: ParkingStartSessionCodevergunningButton
- tapOn:
    text: 'Allow|Sta toe'
    optional: true
- assertVisible:
    id: ParkingStartSessionSuccessAlert
- tapOn: 'Kenteken ${output.licensePlate}.*'
- tapOn:
    id: ParkingSessionDetailsAdjustEndTimeButton
- runFlow: parking/shared/ChooseEndTimeScrollWheel.yaml
- tapOn:
    id: ParkingEditSessionButton
- assertVisible:
    id: ParkingAdjustSessionSuccessAlert
- scrollUntilVisible:
    element:
      id: ParkingLicensePlatesButton
- tapOn:
    id: ParkingLicensePlatesButton
    retryTapIfNoChange: true
- tapOn: 'Verwijder kenteken ${output.licensePlate}.*'
- tapOn: 'Verwijderen'
