appId: nl.amsterdam.app.dev
jsEngine: graaljs
---
- launchApp:
    clearState: true
    permissions:
      notifications: allow
- runScript: parking/scripts/getRandomLicensePlate.js
- runFlow:
    file: parking/shared/InitStartSession.yaml
    env:
      PERMIT: 'Kraskaart.*'
      REPORT_CODE: __PARKING_ACCOUNT_KRASKAART_REPORT_CODE__
      PIN_CODE: __PARKING_ACCOUNT_KRASKAART_PIN_CODE__
- tapOn:
    id: ParkingGoToStartSessionKraskaartvergunningButton
- tapOn:
    id: 'ParkingChooseLicensePlateButton'
- waitForAnimationToEnd
- assertVisible:
    id: ParkingSessionAddLicensePlateSubmitButton
- runFlow: parking/shared/SaveLicensePlate.yaml
- tapOn:
    id: 'ParkingChooseEndTimeButton'
- swipe:
    from:
      id: TimeDurationSpinnerLine2
    direction: RIGHT
- tapOn:
    id: 'ParkingSessionEndTimeBottomSheetContentDoneButton'
- tapOn:
    id: 'ParkingChoosePaymentZoneButton'
- tapOn:
    id: 'ParkingSessionPaymentZoneRadioGroupT11VRadioButtonPhrase'
- tapOn:
    id: 'ParkingSessionPaymentZoneBottomSheetContentDoneButton'
- assertVisible:
    id: 'ParkingChooseLicensePlateTitle'
- scrollUntilVisible:
    element:
      text: 'Bevestig parkeersessie'
- extendedWaitUntil:
    visible:
      id: 'ParkingCostTitle'
- scrollUntilVisible:
    element:
      text: 'Bevestig parkeersessie'
- tapOn: 'Bevestig parkeersessie'
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- runFlow:
    file: shared/SetTimeOut.yaml
    env:
      TIMEOUT_DURATION: '20000'
- tapOn: 'Kenteken ${output.licensePlate}.*'
- runFlow: parking/shared/ChangeEndTime.yaml
- runFlow: parking/shared/StopParkingSession.yaml
- tapOn:
    id: ParkingGoToStartSessionKraskaartvergunningButton
