appId: nl.amsterdam.app.dev
---
- tapOn: "Redirect »"
- tapOn: "Ga verder"
- tapOn: "Open"