appId: nl.amsterdam.app.dev
---

- assertVisible: "Steek de stekker in het stopcontact"
- assertVisible: ${output.boatChargingVcpsStationId + '-' + output.boatChargingSocket}

# Simulate plugging in the cable
- runFlow: ../vcps/open-vcps.yaml
- runFlow: ../vcps/turn-vcps-on.yaml
- runFlow: ../vcps/plug-cable-in-vcps.yaml
# TODO: the next step should be replaced by opening the app again, but for now we just go back to the app which only works on iOS
- runFlow: ../vcps/back-to-app.yaml

- assertVisible: "De stekker is aangesloten. De sessie kan worden gestart."
- tapOn:
    id: "BoatChargingSessionButtonsStartButton"
- extendedWaitUntil:
    notVisible: 
      id: "BoatChargingSessionButtonsStartButton"
    timeout: 180000
- assertVisible: "Geladen"