appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      text: "Turn O(n|ff)"
    direction: UP
- tapOn: 
    text: "Turn Off"
    optional: true
- tapOn: "Turn On"