appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeBurningGuideModuleButton
- tapOn:
    id: BurningGuideAddressSwitch
- runFlow:
    label: Enter address
    file: '../shared/EnterAddress.yaml'
    env:
      ADDRESS: Cruquiusweg 5
      BAGID: '0363200000406068'
      ID: BurningGuide
      SAVEASMYADDRESS: Yes

- scrollUntilVisible:
    element:
      id: BurningGuideNotificationSwitchSwitch
- tapOn:
    text: '.* staat uit'
    id: BurningGuideNotificationSwitchSwitch
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- tapOn:
    text: '.* staat aan'
    id: BurningGuideNotificationSwitchSwitch
- assertVisible:
    text: '.* staat uit'
    id: BurningGuideNotificationSwitchSwitch
