appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeConstructionWorkModuleButton
- runFlow:
    file: ../shared/open-test-project.yaml
- tapOn:
    id: "ConstructionWorkProjectFollowButtonTooltip"
    optional: true
- tapOn:
    id: ConstructionWorkProjectUnfollowButton
    optional: true
- tapOn:
    id: ConstructionWorkProjectFollowButton
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- tapOn:
    id: ConstructionWorkProjectUnfollowButton
- assertVisible:
    id: ConstructionWorkProjectFollowButton
- tapOn:
    id: 'ConstructionWorkProjectArticlePreviewButton'
- assertVisible:
    id: "ConstructionWorkProjectArticle\\d+Image"
- assertVisible:
    id: "ConstructionWorkProjectArticle\\d+DateLabel"
- assertVisible:
    id: "ConstructionWorkProjectArticle\\d+ProjectTitle"
- assertVisible:
    id: "ConstructionWorkProjectArticle\\d+Title"
- assertVisible:
    id: 'html'
