appId: nl.amsterdam.app.dev
---
- evalScript: ${output.timeout = Number(TIMEOUT || '10000')}

- tapOn:
    id: ChatHeaderToggleVisibilityButton
- extendedWaitUntil:
    optional: true # Non-blocking: Maestro is often too slow minimizing the chat before incoming bot response
    visible:
      text: "^.* nieuw(e)? bericht(en)?.*$"
    timeout: ${output.timeout}
- tapOn:
    id: ChatHeaderMaximizeButton
- waitForAnimationToEnd
