appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ChatTextInput
- inputText: ${TEXT}

- runFlow:
    file: '../../../shared/close-keyboard.yaml'

- tapOn:
    id: ChatTextInputSendButton
- scrollUntilVisible:
    element:
      text: '^.*${TEXT}.*$'
