appId: nl.amsterdam.app.dev
---
- tapOn:
    id: ChatTextInput
- inputText: ${TEXT}

- runFlow:
    file: "./hideKeyboard.yaml"

- tapOn:
    id: ChatTextInputSendButton
- scrollUntilVisible:
    element:
      text: "^.*${TEXT}.*$"
