appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      id: ${ID}
- assertVisible:
    id: "^${ID}.*Icon$"
- tapOn:
    id: ${ID}
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "breadcrumb"
- runFlow:
    file: "../../shared/HandleBackNavigateAndroid.yaml"
    env:
      MAX_TIMES: "3"
      UNTIL_VISIBLE_ID: ${ID}
