appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runScript: ../../scripts/credentials.js
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeParkingModuleButton
- runFlow:
    file: ../../parking/shared/login.yaml
    env:
      REPORT_CODE: ${output.parkingVisitorPermitHolderReportCode}
      PIN_CODE: ${output.parkingVisitorPermitHolderPinCode}
- launchApp:
    clearState: false
- tapOn:
    id: HomeParkingModuleButton
- tapOn:
    id: AccessCodeForgotButton
- tapOn:
    id: ParkingForgotAccessCodeScreenButton
- assertVisible: Inloggen
