appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app-without-permissions.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeParkingModuleButton
- runScript: ../../scripts/credentials.js
- runFlow:
    file: ../shared/login.yaml
    env:
      REPORT_CODE: ${output.parkingResidentsReportCode}
      PIN_CODE: ${output.parkingResidentsPinCode}
- tapOn: "Kies ander kenteken"
- tapOn:
    id: "ParkingChooseLicensePlateButton"
- tapOn:
    id: "ParkingSessionSelectLicensePlateTopTaskButton"
- tapOn: 'Activeer kenteken'
- runFlow:
    when:
        visible:
            id: "ParkingChooseLicensePlateButtonErrorText"
    commands:
        - tapOn:
            id: "ParkingChooseLicensePlateButton"
        - tapOn:
            id: "ParkingSessionSelectLicensePlateTopTaskButton"
            index: 1
        - tapOn: 'Activeer kenteken'
- tapOn:
    id: "ParkingStartSessionSuccessAlert"
- assertVisible:
    id: "ParkingSessionNavigationButton"
- runFlow:
    file: '../navigation/history.yaml'
- tapOn:
    id: HeaderBackButton
- tapOn:
    id: "ParkingLicensePlatesButton"
- assertVisible:
    id: "LicensePlateListItemNavigationButton"
- assertVisible:
    id: "ParkingMyLicensePlatesForceLicensePlatesPhoneExternalLinkButton"
- tapOn:
    id: HeaderBackButton
- runFlow:
    file: '../navigation/permit-zone.yaml'



