appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeParkingModuleButton
- runScript: ../../scripts/credentials.js
- runFlow:
    file: ../shared/login.yaml
    env:
      REPORT_CODE: ${output.parkingVisitorPermitHolderReportCode}
      PIN_CODE: ${output.parkingVisitorPermitHolderPinCode}
- runFlow:
    file: ../shared/select-permit.yaml
    env:
      PERMIT_NAME: 'Bezoekersparkeervergunning( \(1004\))?'
- runFlow: 
    file: '../shared/start-session.yaml'
    env:
        IS_PAID: 'true'
- runFlow: '../sessions/active.yaml'
- tapOn:
    id: HeaderBackButton
- runFlow: 
    file: '../navigation/navigation.yaml'
    env:
        IS_PAID: 'true'
- runFlow: '../visitor-payment/visitor-payment.yaml'
- assertVisible:
    id: "ParkingPermitBalanceMoneyAddButton"
- assertVisible:
    id: "ParkingHomeParkingInformationExternalLinkButton"

